# esp32-garden-door

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32h2
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  idf_component.yml
main/drivers/: door_lock_callbacks.cpp  doorbell_driver.c  doorbell_driver.h  relay_driver.c  relay_driver.h
